fix clone and add documents/usefullinks controllers
